paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.compile.log
error[E0106]: missing lifetime specifier
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:2:17
  |
2 |     p_to_const: &mut &i32,
  |                 ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct Bundle<'a> {
2 ~     p_to_const: &'a mut &i32,
  |

error[E0106]: missing lifetime specifier
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:2:22
  |
2 |     p_to_const: &mut &i32,
  |                      ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct Bundle<'a> {
2 ~     p_to_const: &mut &'a i32,
  |

error[E0106]: missing lifetime specifier
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:3:14
  |
3 |     const_p: &mut i32,
  |              ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct Bundle<'a> {
2 |     p_to_const: &mut &i32,
3 ~     const_p: &'a mut i32,
  |

error[E0106]: missing lifetime specifier
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:4:26
  |
4 |     const_p_via_typedef: &mut i32,
  |                          ^ expected named lifetime parameter
  |
help: consider introducing a named lifetime parameter
  |
1 ~ struct Bundle<'a> {
2 |     p_to_const: &mut &i32,
3 |     const_p: &mut i32,
4 ~     const_p_via_typedef: &'a mut i32,
  |

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:61:43
   |
61 |     retarget_ptr_to_const(&mut b, &y, &x, pick(&y, 0) > 0);
   |     ---------------------                 ^^^^^^^^^^^^^^^ expected `i32`, found `bool`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:16:4
   |
16 | fn retarget_ptr_to_const(b: &mut Bundle, a: &i32, c: &i32, sel: i32) {
   |    ^^^^^^^^^^^^^^^^^^^^^                                   --------

error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:66:43
   |
66 |     retarget_ptr_to_const(&mut b, &x, &y, pick(&x, 1) < 0);
   |     ---------------------                 ^^^^^^^^^^^^^^^ expected `i32`, found `bool`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/ptr_decl/sample_001/target.rs:16:4
   |
16 | fn retarget_ptr_to_const(b: &mut Bundle, a: &i32, c: &i32, sel: i32) {
   |    ^^^^^^^^^^^^^^^^^^^^^                                   --------

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0106, E0308.
For more information about an error, try `rustc --explain E0106`.